--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "loganpc/file-extend",
+    "name": "moshuky/file-extend",
     "description": "logan file upload sdk",
     "keywords": ["php7", "oss"],
     "license": "MIT",
